--- a/index.html
+++ b/index.html
@@ -21,29 +21,30 @@
     </header>
 
     <main class="content">
+
       <section class="description">
-        <div class="two-columns">
+        <article class="two-columns">
           <h2 class="two-columns__brief">Главные проблемы в обучении</h2>
           <div class="two-columns__main-text">
             <p class="two-columns__paragraph">
-                Ни в школе, не в институте нас не учат тому, как правильно изучать материал. Мы готовимся к экзаменам и учим билеты.
-                Мы тренируемся решать однообразные задачи, чтобы лучше сдать тест, но часто в итоге это не дает нам реального знания. 
-                Зубрежка быстро выветривается и не приносит пользы.
+              Ни в школе, не в институте нас не учат тому, как правильно изучать материал. Мы готовимся к экзаменам и учим билеты.
+              Мы тренируемся решать однообразные задачи, чтобы лучше сдать тест, но часто в итоге это не дает нам реального знания. 
+              Зубрежка быстро выветривается и не приносит пользы.
             </p>
             <p class="two-columns__paragraph">
-                <span class="two-columns__span-accent">Вывод: </span>учиться тоже нужно уметь, но почему-то этому мало где учат. Что с этим делать?
+              <span class="two-columns__span-accent">Вывод: </span>учиться тоже нужно уметь, но почему-то этому мало где учат. Что с этим делать?
             </p>
             <p class="two-columns__paragraph">
-                Конкретные техники и упражнения помогают изменить подход к обучению, сделать его эффективным и захватывающим. Эти же 
-                техники применяются на примере обучения в Практикуме.
+              Конкретные техники и упражнения помогают изменить подход к обучению, сделать его эффективным и захватывающим. Эти же 
+              техники применяются на примере обучения в Практикуме.
             </p>
           </div>
-        </div>
+        </article>
       </section>
 
       <section class="techniques">
         <h2 class="section-title">Техники обучения</h2>
-        <p class="section-subtitle section-subtitle_margin_top">Пять практик от Барбары Оакли</p>
+        <p class="section-subtitle techniques__subtitle">Пять практик от Барбары Оакли</p>
         <ul class="cards">
           <li class="cards__item">
             <img src="./images/cards-attention.png" alt="Иллюстрация 'Два вида внимания'" class="cards__image">
@@ -75,15 +76,19 @@
 
       <section class="video">
         <h2 class="section-title">Видео на TED</h2>
-        <p class="section-subtitle section-subtitle_margin_top">Для тех, кто любит прокрастинировать</p>
-        <div class="video__iframes">
-          <iframe title="TED Джош Кауфман" src="https://www.youtube.com/embed/5MgBikgcWnY" class="video__iframe"></iframe>
-          <iframe title="TED Тим Урбан" src="https://www.youtube.com/embed/arj7oStGLkU" class="video__iframe"></iframe>     
-        </div> 
+        <p class="section-subtitle video__subtitle">Для тех, кто любит прокрастинировать</p>
+        <ul class="video__iframes">
+          <li>
+            <iframe title="TED Джош Кауфман" src="https://www.youtube.com/embed/5MgBikgcWnY" class="video__iframe"></iframe>
+          </li>
+          <li>
+            <iframe title="TED Тим Урбан" src="https://www.youtube.com/embed/arj7oStGLkU" class="video__iframe"></iframe> 
+          </li>  
+        </ul> 
       </section>
       
       <section class="oakley">
-        <div class="two-columns">
+        <arcticle class="two-columns">
           <h2 class="two-columns__brief">История Барбары Оакли</h2>
           <div class="two-columns__main-text">
             <p class="two-columns__paragraph">
@@ -93,7 +98,7 @@
               с первого взгляда.
             </p>
           </div>
-        </div>
+        </arcticle>
       </section>
 
       <section class="feynman">
@@ -104,7 +109,7 @@
 
       <section class="digits">
         <h2 class="section-title">Цифры и факты</h2>
-        <p class="section-subtitle section-subtitle_margin_top">Про учёбу и мозг</p>
+        <p class="section-subtitle digits__subtitle">Про учёбу и мозг</p>
         <ul class="table">
           <li class="table__cell">
             <h3 class="table__heading">86 миллиардов</h3>
@@ -163,7 +168,7 @@
 
       <section class="kaufman">
         <h2 class="section-title section-title_theme_dark">Принципы обучения</h2>
-        <p class="section-subtitle section-subtitle_theme_dark section-subtitle_margin_top">от Джоша Кауфмана</p>
+        <p class="section-subtitle kaufman__subtitle section-subtitle_theme_dark">от Джоша Кауфмана</p>
         <ul class="table table_theme_dark">
           <li class="table__cell table__cell_theme_dark">
             <h3 class="table__heading table__heading_theme_dark">1</h3>
@@ -211,31 +216,29 @@
 
       <section class="resources">
         <h2 class="section-title">Полезные ресурсы</h2>
-        <p class="section-subtitle section-subtitle_margin_top">Больше материалов о техниках и лайфхаках обучения</p>
-        <nav>
-          <ul class="resources__logo-zone">
-            <li>
-              <a href="#" class="resources__logo-link">
-                <img src="./images/resources-arzamas.svg" alt="Логотип 'Arzamas'" class="resources__logo">
-              </a>       
-            </li>
-            <li>
-              <a href="#" class="resources__logo-link">
-                <img src="./images/resources-n1.svg" alt="Логотип 'N+1'" class="resources__logo">
-              </a>
-            </li>
-            <li>
-              <a href="#" class="resources__logo-link">
-                <img src="./images/resources-strelka.svg" alt="Логотип 'STRELKA'" class="resources__logo">
-              </a>
-            </li>
-            <li>
-              <a href="#" class="resources__logo-link">
-                <img src="./images/resources-polka.svg" alt="Логотип 'ПОЛКА'" class="resources__logo">
-              </a>
-            </li> 
-          </ul>
-        </nav>   
+        <p class="section-subtitle resources__subtitle">Больше материалов о техниках и лайфхаках обучения</p>
+        <ul class="resources__logo-zone">
+          <li>
+            <a href="#" class="resources__logo-link">
+              <img src="./images/resources-arzamas.svg" alt="Логотип 'Arzamas'" class="resources__logo">
+            </a>       
+          </li>
+          <li>
+            <a href="#" class="resources__logo-link">
+              <img src="./images/resources-n1.svg" alt="Логотип 'N+1'" class="resources__logo">
+            </a>
+          </li>
+          <li>
+            <a href="#" class="resources__logo-link">
+              <img src="./images/resources-strelka.svg" alt="Логотип 'STRELKA'" class="resources__logo">
+            </a>
+          </li>
+          <li>
+            <a href="#" class="resources__logo-link">
+              <img src="./images/resources-polka.svg" alt="Логотип 'ПОЛКА'" class="resources__logo">
+            </a>
+          </li> 
+        </ul>
       </section>
   
     </main>
